# media-bot

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
docs/: adapter-roadmap.md  architecture.md  continue-here.md  event-log-schema.md  project-charter.md  reuse-map-anime-pipe.md  setup-guide.md  tool-adapter-memory.md  tool-contracts.md  tool-manifest.yaml  tool-surface.md
docs/blocks/: README.md  block-01-integration-verification.md  block-02-discord-gateway.md  block-03-tautulli-webhooks.md  block-04-space-management.md  block-05-mcp-integration.md  block-07-discord-observability-matchdoctor.md  (+17 more)
docs/decisions/: README.md  (+1 more)
scripts/: idm_bridge_launcher.js  init_state_db.py  launcher.js  run-embeddings-backfill.ps1  run-gemini-enrichment.ps1  run-tmdb-enrichment.ps1  run-wikidata-enrichment.ps1  run_embeddings_backfill.py  run_idm_bridge.ps1
state/: schema.sql  watcher-state.json
tests/: test_check_state_and_health.py  test_conversational_rag.py  test_dedupe.py  test_discord_app.py  test_domain_database_router.py  test_external_recommendations.py  test_file_selection.py  test_intelligence.py  test_jobs_and_diagnostics.py  test_mcp_server.py  test_media_watcher_client.py  test_mismatch_guard.py  test_multi_user_rag.py  test_persona_settings.py  test_pipeline_status.py  test_playback_notifications.py  test_plex_client.py  test_plex_domain_mapping.py  test_poster_integration.py  test_query_library_semantic_regression.py  test_tautulli_webhook.py  test_user_profile.py  test_watch_history.py
(+94 files in other folders)
