[project]
name = "movie-media-bot"
version = "1.4.0"
description = "Modular, tool-friendly Discord media bot for movie searching and IDM handoffs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3.2",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "mcp>=0.9.1",
    "pyyaml>=6.0.1",
    "rapidfuzz>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moviebot"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
